# Andent_Webapp

./: .gitignore  AGENTS.md  README.md  formflow.spec  opencode.json  package-lock.json  package.json  playwright.config.ts  requirements.txt  run_formflow.py  run_tray.py  temp_check_thumbnail.cjs  temp_thumbnail.html  tsconfig.json
.claude/: settings.local.json
Andent/: README.md
app/: AGENTS.md  __init__.py  config.py  database.py  logging_config.py  main.py  schemas.py  state.py  version.py
core/: AGENTS.md  __init__.py  andent_classification.py  andent_planning.py  andent_service_pipeline.py  batch_optimizer.py  cache.py  constants.py  fps_parser.py  stl_validator.py
desktop/: __init__.py  tray_runtime.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: classify_batch.py  db_tables.py  (+3 more)
tools/formlabsAFA-main/: .gitignore  README.DEVELOPER.md  README.md  config.example.toml  pyproject.toml
tools/formlabsAFA-main/docs/: MES_INTEGRATION.md
tools/formlabsAFA-main/formlabsAFA/: __main__.py  api.py  batch.py  config.py  context.py  dashboard.py  db.py  frame_profile.py  layout.py  log.py  queue.py  watcher.py
tools/formlabsAFA-main/formlabsAFA/mesh/: chamfer.py  geometry.py  punch.py  webbing.py
tools/formlabsAFA-main/formlabsAFA/preform/: client.py  operations.py  server.py
tools/formlabsAFA-main/frame_profiles/: modelFixture.stl
tools/formlabsAFA-main/frame_profiles/large/: frame.stl  profile.toml
tools/formlabsAFA-main/frame_profiles/small/: frame.stl  profile.toml
tools/formlabsAFA-main/tests/: test_config_validators.py
(+317 files in other folders)
